# toy_llms

./: .gitignore  linear_model.py  pyproject.toml
orchestration/: .env.example  .scp_config.example  entrypoint.sh  job.py  launch.sh  readme.md  test.dstack.yml  test_job.sh
training_dynamics/: olmo_weights.ipynb
