[tool.poetry]
name = "toy-llms"
version = "0.1.0"
description = ""
authors = ["William Henning <wchenningwchenning@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.*"
datasets = "^3.1.0"
pytorch-lightning = "^2.4.0"
transformers = "^4.46.3"
sentencepiece = "^0.2.0"
protobuf = "^5.28.3"
tensorboard = "^2.18.0"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
